# meme-box

./: .all-contributorsrc  .deepsource.toml  .editorconfig  .eslintignore  .eslintrc-angular-specific.json  .eslintrc-shared-libs.json  .eslintrc.js  .eslintrc.json  .gitignore  .npmrc  .prettierrc.json  API_ENDPOINTS.md  BUILD.md  CHANGELOG.md  LICENSE.md  README.md  README_DEV.md  REFACTOR_THIS.md  ROADMAP.md  STACK.md  TODO.md  WebSocket-Actions.md  angular.json  cypress.json  decorate-angular-cli.js  documentation.json  electron-builder.json  electron-shell.ts  jest.config.js  main.ts  nx.json  package-lock.json  package.json  preload.ts  project.json  setup-jest.ts  transloco.config.js  tsconfig-electron.json  tsconfig-serve.json  tsconfig.base.json  (+5 more)
.storybook/: main.js  preview.js
assets/: Memebox.xcf
features/: tags-and-meta.md
memebox-streamdeck/: .gitignore  package.json
scripts/: move-binary.js
server/: .eslintrc.json  .mocharc.json  config-file-upgrade.ts  constants.ts  express-server.ts  file.utilts.ts  jest.config.js  logger.utils.ts  mocha.setup.js  network-interfaces.ts  path.utils.ts  persistence.functions.ts  persistence.ts  project.json  server-app.ts  server.bootstrap.ts  server.ts  server.tsed.ts  shared.ts  timed.handler.ts  tsconfig.server.json  twitch.functions.spec.ts  twitch.functions.ts  twitch.handler.ts  validations.spec.ts  validations.ts  websocket-server.ts
src/: .eslintrc.json  css-var-colors.scss  index.html  (+10 more)
src-tauri/: .gitignore  Cargo.toml  index.html  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+1198 files in other folders)
