[package]
name = "memebox"
version = "0.1.0"
description = "A meme-management tool"
license = "AGPL-3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2.1", features = ["codegen"] }

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tauri = { version = "1.2.4", features = ["custom-protocol", "shell-sidecar", "system-tray"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
strip = true
